welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: ')' expected but ',' found.
  while ( getX() , getY() != getMondeLargeur()-1 , getMondeHauteur()-1 ) 
                 ^ColumnByColumn:3: error: ';' expected but ',' found.
  while ( getX() , getY() != getMondeLargeur()-1 , getMondeHauteur()-1 ) 
                                                 ^